Lavede header og footer

--- a/abstract.tex
+++ b/abstract.tex
@@ -1,4 +1,5 @@
 \section*{Abstract}
+\thispagestyle{plain}
 This report examines the harmonic motion of a spring. 
 It does this by examining the physical laws of springs and mechanical physics more broadly. 
 These laws are then used to propose a mathematical model of the motion of an object hanging in a spring.
