--- a/Kapitel3/Eksperiment2.tex
+++ b/Kapitel3/Eksperiment2.tex
@@ -17,12 +17,17 @@ Vi kan derfor opskrive en karakterligning for den:
 $r^2 + \frac{\mu}{m} r + \frac{k}{m} = 0$, med rødderne $r = \dfrac{-\frac{\mu}{m} \pm \sqrt{\frac{\mu^2}{m^2}-4\frac{k}{m}}}{2}=
 -\frac{\mu}{2m}  \pm   \frac{\sqrt{-\frac{\mu^2}{m^2}+4\frac{k}{m}}}{2}$.
 Vi vil nu gerne bruge disse rødder til at opskrive en forventet funktion til beskrivelse af bevægelsen. 
-Dog har vi det problem at vi ikke ved om rødderne bliver komplekse eller reelle, da dette afhænger af hvor stor en værdi $\mu$ er i forhold til $k$.
+Dog har vi det problem, at vi ikke ved om rødderne bliver komplekse eller reelle, da dette afhænger af hvor stor en værdi $\mu$ er i forhold til $k$.
 Hvis vi har at størrelsen $\frac{\mu^2}{m^2}-4\frac{k}{m}$ er positiv, så må vi have reelle rødder, hvorimod vi må have komplekse hvis den er negativ. 
 Der er selvfølgelig også grænsetilfældet hvor det er lig $0$, men da dette er højest usandsynligt vil jeg ikke behandle dette. 
 
 Da vi skal opstille en hypotese, vil det være forventeligt at rødderne er komplekse. 
 Dette fordi vi i forsøg 1 gjorde præcis det samme som her og så at en model med komplekse rødder så ud til at fungere. 
+
+For at omskrive $\sqrt{\frac{\mu^2}{m^2}-4\frac{k}{m}}$ mere tydeligt til et komplekst tal, så vi ved hvad der er imaginærdelen, kan vi gange med $-1$ inde under kvadratroden to gange. 
+Så får vi $\sqrt{(-1)(-\frac{\mu^2}{m^2}+4\frac{k}{m})}$.
+Vi kan da tage $-1$ ud af kvadratrodstegnet ved at tage kvadratroden af det. 
+Så får vi $\sqrt{-\frac{\mu^2}{m^2}+4\frac{k}{m}}i$
 
 I det vores løsninger til karakterligningen forventes at være komplekse, kan vi da forvente en bevægelse der kan beskrives ved:
 $$e^{-\frac{\mu}{2m} \cdot x}A\sin(\frac{\sqrt{-\frac{\mu^2}{m^2}+4\frac{k}{m}}}{2} \cdot x+\phi)$$
@@ -55,27 +60,28 @@ Desuden er $s_0$ lagt til for at tage højde for, at loddet hænger et stykke ov
 \textbf{Forsøg E}      & -0,06358                          & 0,06068                           & 7,385                             & 6,25                                 & 0,2959                              & 0,0007398                          \\ \hline
 \end{tabular}
 \caption{Konstanter fra best-fit-kurver til forsøg 2. De tilhørende grafer er vedlagt som bilag i filen ''Forsøg 2 - grafer.pdf''.}
+\label{tabel: best fit exp2}
 \end{table}
 
 \subsubsection{Vurdering af data}
 
 Som udgangspunkt ser det meget godt ud med de meget lave værdier af RMSE. 
-Dog kan man se et problem hvis man kigger på grafen.
+Dog kan man se et problem, hvis man kigger på grafen.
 Det ser ud til at der ikke kan findes en passende værdi af $a$, således at best-fit kurven passer på kurven hele vejen igennem. 
 Dette kan ses meget tydeligt ved at kigge på den sidste del af grafen, hvor best-fit-kurven er mindre end den målte data.
-der kan ses et eksempel på dette på figur \ref{fig: Fejlkurve exp2}.
+Der kan ses et eksempel på dette på figur \ref{fig: Fejlkurve exp2}.
 
 \begin{figure}[h]
 \center
 \includegraphics[scale=0.5]{Figurer/Kurvefejl}
-\caption{Indzoomet udklik af de sidste ca. $4.5$ sekunder af forsøg E. Det ses her tydeligt at dataen (rød) har et markant større udsving end best-fit-kurven (sort).}
+\caption{Indzoomet udklip af de sidste ca. $4.5$ sekunder af forsøg E. Det ses her tydeligt  at mit data (rød) har et markant større udsving end best-fit-kurven (sort).}
 \label{fig: Fejlkurve exp2}
 \end{figure}
 
 Grunden til den forskel som ses på figur \ref{fig: Fejlkurve exp2}, er formentlig af vores model for vindmodstanden ikke er helt god nok. 
 Med den teori vi har om vindmodstand fra afsnit \ref{teori:vindmodstand}, vil det være et logisk gæt at sige at vi skal have en anden eksponent på vindmodstanden end 1. 
 
-Da teorien siger at vi bør have en eksponent på 2, kan denne forskel måske tilskrives at modellen ikke har den rigtige eksponent.
+Da teorien siger, at vi bør have en eksponent på 2, kan denne forskel måske tilskrives at modellen ikke har den rigtige eksponent.
 Vi kan dog ikke, som vi så i afsnit \ref{teori: Den ikke-linear andenordens ligning}, kan vi ikke finde en symbolsk løsning til ligningen med eksponent 2, og vi kan derfor ikke lave et curve-fit. 
 Vi kan dog godt lave numeriske løsninger for de to modeller hvor deres koefficienter er de samme, og så observere om modellen med potens på opfører sig på samme måde i forhold til den lineære model som mit data gør i forhold til den lineære model.
 
@@ -87,9 +93,10 @@ mx'' + \mu x' + kx = 0
 \end{equation}
  
 
-Før vi kan opsætte en den ikke-lineære differentialligningsmodel, er vi nødt til at tackle det problem der opstår i at vi mister fortegnet på $x'$ i det at vi sætter det i anden.
+Før vi kan opsætte en den ikke-lineære differentialligningsmodel, er vi nødt til at tackle det problem der opstår i, at vi mister fortegnet på $x'$, i det at vi sætter det i anden.
 Dette problem kan vi løse med at gange størrelsen $\frac{x'}{|x'|}$ på leddet. 
 Denne størrelse har egenskaben at den er positiv hvis $x'$ er positiv og negativ hvis $x'$ er negativ. 
+Derudover er den altid numerisk lig 1, og derfor kan vi frit gange den på, uden at gøre resultatet numerisk større eller mindre. 
 Det eneste problem det skaber er at størrelsen er udefineret når $x'=0$, men dette er ikke et stort problem når man laver numeriske løsninger, da man med meget lille sandsynlighed vil ramme netop 0, men oftere nogle meget lange kommatal. 
 
 Vi kan nu opsætte den ikke-lineære differentialligning, hvor $x'$ er sat i anden potens:
@@ -116,10 +123,11 @@ På figur \ref{fig: numeriske solutions} kan man se de numeriske løsninger.
 
 \end{figure}
 
-Hvis vi nu betragter figur \ref{fig: Fejlkurve exp2} med figur \ref{fig: numeriske solutions}, så ser vi at de er meget ens. 
-Den blå kurve der har det mindste udsving ligner selvfølgelig best-fit-kurven på figur \ref{fig: Fejlkurve exp2}, da de er dannet fra den samme differentialligning. 
+Hvis vi nu betragter figur \ref{fig: Fejlkurve exp2} med figur \ref{fig: numeriske solutions}, så ser vi, at de er meget ens. 
+Den blå kurve, der har det mindste udsving, ligner selvfølgelig best-fit-kurven på figur \ref{fig: Fejlkurve exp2}, da de er dannet fra den samme differentialligning. 
 Det der er interessant, er at den røde kurve forholder sig på den samme måde til den blå på figur \ref{fig: numeriske solutions}, som mit data forholder sig til best-fit-kurven på figur \ref{fig: Fejlkurve exp2}. 
-Dette tyder nemlig på at den ikke-lineære model ville have kunnet beskrive mit datasæt bedre. 
+Dette tyder nemlig på at den ikke-lineære model ville have kunnet beskrive mit datasæt bedre, da det opfører sig på samme måde som mit data i forhold til best-fit-kurverne. 
+Med samme årsag kan vi også begrunde de varierende værdier af $a$ der ses i tabel \ref{tabel: best fit exp2}.
 
 
 
@@ -128,5 +136,5 @@ Dette tyder nemlig på at den ikke-lineære model ville have kunnet beskrive mit
 \subsection{Konklusion}
 Den lineære homogene andenordens differentialligning er en forholdsvist god model til at beskrive bevægelsen, men den er ikke perfekt. 
 Den kurve der produceres fra differentialligningen har træk der minder meget om den rigtige kurve, men jo længere tid der går, jo dårligere viser det sig at den beskriver bevægelsen. 
-Det viser sig også at ikke-lineær differentialligningsmodel hvor dæmpningsledet er i anden, beskriver bevægelsen bedre, specielt når vi kigger på svingninger i længere tid.
+Det viser sig også, at ikke-lineær differentialligningsmodel (ligning \ref{eq: diff i anden}) hvor dæmpningsledet er i anden, beskriver bevægelsen bedre, specielt når vi kigger på svingninger i længere tid.
 
