--- a/Kapitel3/Introduktion.tex
+++ b/Kapitel3/Introduktion.tex
@@ -1,8 +1,8 @@
 \chapter{Forsøg}
 Hele denne opgave tager udgangspunkt i et forsøg.
-Jeg vil her forsøge at beskrive dette forsøg, og udnytte den matematik jeg har beskrevet til at finde ud af om de opstillede differentialligninger fra afsnit \ref{teori: opsatning af differentialligninger} rent faktisk passer på virkeligheden.
+Jeg vil her forsøge at beskrive dette forsøg, og udnytte den matematik, jeg har beskrevet, til at finde ud af om de opstillede differentialligninger fra afsnit \ref{teori: opsatning af differentialligninger} rent faktisk passer på virkeligheden.
 
-Jeg har udført tre delforsøg, som hvert i sær er tænkt til at afprøve et stykke teori:
+Jeg har udført to forsøg, som hvert i sær er tænkt til at afprøve et stykke teori:
 \begin{itemize}
 	\item Svingning af lod i luft i kort
 	\item Svingning af lod i luft i længere tid
@@ -11,4 +11,4 @@ Jeg har udført tre delforsøg, som hvert i sær er tænkt til at afprøve et st
 Det første forsøg er ment til at skulle passe på differentialligningen uden dæmpningsled.
 
 Det andet forsøg er tænkt til at at passe med et dæmpningsled ved lav hastighed, og altså derfor med dæmpningsledet i 1. potens.
-Dette forsøg forsøger også at undersøge om en model med dæmpningsleder i anden vil fungere bedre end en hvor det er i første. 
+Dette forsøg forsøger også at undersøge, om en model med dæmpningsleder i anden vil fungere bedre, end en hvor det er i første. 
