Changed chapters to match the new chapter 5

--- a/main.tex
+++ b/main.tex
@@ -44,9 +44,9 @@
 \input{Kapitel3/Eksperiment1}
 \input{Kapitel3/Eksperiment2}
 
-\input{Sammenfatning}
+\input{Kapitel4/Sammenfatning}
 
-\input{Kapitel4/Introduktion}
+\input{Kapitel5/Introduktion}
 
 \input{bibliografi}
 \input{Bilagsliste}
