Gennemlæsning af abstract

--- a/abstract.tex
+++ b/abstract.tex
@@ -1,17 +1,21 @@
 \section*{Abstract}
 \thispagestyle{plain}
-This report examines the harmonic motion of a spring. 
-It does this by examining the physical laws of springs and mechanical physics more broadly. 
-These laws are then used to propose a mathematical model of the motion of an object hanging in a spring.
+The aim of this paper is to make a mathemathical model describing the harmonic motion of an object in a spring. 
 
-To easily solve these differential equations found in physics, this report examines them more generally. 
+This paper examines the harmonic motion. 
+By examining the physical laws of springs and mechanical physics more generally it proposes a mathematical model of the motion of an object hanging in a spring.
+
+To easily solve these differential equations found in physics, this report examines them more generally by using mathemathical analasys. 
 It describes the complete solution to the second order linear homogeneous differential equation, and gives a partial proof that the solution proposed is the complete solution. 
 
 Having explained how to solve the differential equation, it then examines experiments meant to test whether the model of differential equations proposed about the motion are accurate.
 
-Through two experiments it finds, that the second order linear homogeneous differential equation is a good description of the motion.
+Through two experiments it finds that the second order linear homogeneous differential equation is a good description of the motion.
 However, it also finds that the description is not perfect and then proposes an improvement of the model that makes the equations non-linear.
-It argues why this improved model describes the motion better but it also shows why the model is a much harder mathematical problem to solve. 
+It argues why this improved model describes the motion better than the linear model.
+At the same time it shows why the model is a harder mathematical problem to solve than the linear model is. 
 
-The report then examines how this physical model can be used to describe parts a car suspension system.
+Finally, the paper examines how this physical model can be used to describe the suspension system of a car.
+
+In conclusion the paper sets up a model that describes the motion of the spring well in the beginning of the motion, but gets worse as time progresses. 
 
