Tilføjede samlet konklusion af forsøg 1 og 2

--- a/main.tex
+++ b/main.tex
@@ -43,6 +43,7 @@
 \input{Kapitel3/Introduktion}
 \input{Kapitel3/Eksperiment1}
 \input{Kapitel3/Eksperiment2}
+\input{Kapitel3/KonklusionSamlet}
 
 \input{Kapitel4/Sammenfatning}
 
